# circus-planner-tui

./: .gitignore  main.py  pyproject.toml
src/circus_planner/: common.py  config.py  db.py  engine.py  juggling.db  models.py  ui.py
src/circus_planner/data/: juggling.yaml
src/circus_planner/data/siteswaps/: siteswap-3-ball-4-period-5-max.txt  siteswap-3-ball-5-period-5-max.txt  siteswap-4-ball-3-period-6-max.txt  siteswap-4-ball-4-period-6-max.txt  siteswap-4-ball-5-period-6-max.txt
src/circus_planner/screens/: __init__.py  exercise.py  home.py
src/circus_planner/screens/modals/: __init__.py
src/circus_planner/tests/: conftest.py  test_exercise_retrieval.py  test_exercise_screen.py
src/circus_planner/tests/fixtures/: toy.yaml
